
	This file is in Unicode charset, with UTF-8 encoding.

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2018-07-19
	* Support for using LMDB (Lightning Memory-Mapped Database Manager)
	  as the database back-end. Suggested, courteously implemented and
	  contributed by Steffen Nurpmeso, steffen .at. sdaoden.eu.

	2018-07-17
	* The Berkeley DB backend driver forgoes DB_NOSYNC in transactional
	  mode, so as to synchronize changes from the logs back into the .db
	  files to keep them up to date and make environments more robust
	  against a loss of log.* files, for instance, when moving databases.

	2017-09-18
	* The contrib/spamitarium.pl, originally written by Thomas 'Tom'
	  Anderson, was enhanced by Jonathan Kamens and grew a few features.
	  Run perldoc contrib/spamitarium.pl, or spamitarium.pl -h, to read
	  its manual.

	2016-01-26

	* Apply patch from Denny Lin, with one fix, to add support for the
	  KyotoCabinet embedded database library.  To enable, install
	  KyotoCabinet including the development files, and run
	  configure --with-database=kyotocabinet when building bogofilter.
	  Thanks!

	* Apply patch from Denny Lin to plug a few memory leaks in bogofilter's
	  TokyoCabinet implementation, contributed through the bogofilter-dev
	  mailing list.  Thanks!

	2015-10-10

	* Fix build with C89 compilers.

	* Fix several memory leaks.

	* Fix an out-of-bounds memory read in maint.c's discard_token().
	  Found with clang 3.6's address sanitizer.

	2015-02-28

	* Fix the lexer to not try to delete parts from HTML tokens if it is
	  reading garbage (for instance, binary files misdeclared as HTML).
	  This was exposed on Fedora 20 and 21 but not Ubuntu 14.04 (x86_64),