@@ -34,7 +34,7 @@ REMEMBER to read the doc/programmer/README.* file for your operating
 systems in case of trouble.
 
 NOTE: If you are about to build from code checked out via SVN, then
-please read the README.svn file first before you proceed with this file!
+please read the README.git file first before you proceed with this file!
 
 make command
 ============
